<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.steve.basiclabproject.signupscreen">


    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="#6C648D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <EditText
            android:id="@+id/eTUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@android:color/background_light"
            android:ems="10"
            android:hint="UserName"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/eTFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/eTUserName"
            android:layout_alignStart="@+id/eTUserName"
            android:layout_below="@+id/eTUserName"
            android:layout_marginTop="20dp"
            android:background="@android:color/background_light"
            android:ems="10"
            android:hint="FirstName"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/eTLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/eTFirstName"
            android:layout_alignStart="@+id/eTFirstName"
            android:layout_below="@+id/eTFirstName"
            android:layout_marginTop="20dp"
            android:background="@android:color/background_light"
            android:ems="10"
            android:hint="LastName"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/eTEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/eTLastName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@android:color/background_light"
            android:ems="10"
            android:hint="Email"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/eTPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/eTEmail"
            android:layout_alignStart="@+id/eTEmail"
            android:layout_below="@+id/eTEmail"
            android:layout_marginTop="20dp"
            android:background="@android:color/background_light"
            android:digits="0123456789"
            android:ems="10"
            android:hint="PhoneNumber"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/eTPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/eTPhoneNumber"
            android:layout_alignStart="@+id/eTPhoneNumber"
            android:layout_below="@+id/eTPhoneNumber"
            android:layout_marginTop="20dp"
            android:background="@android:color/background_light"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="SIGN UP" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:onClick="exit"
            android:text="Back" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
